--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,9 +33,23 @@ body {
   }
 }
 
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 .fade-in {
   animation: fadeIn 0.5s ease-in-out;
   opacity: 1;
+}
+
+.fade-out {
+  animation: fadeOut 0.2s ease-in-out;
+  opacity: 0;
 }
 
 .animated-move {
