--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -22,6 +22,8 @@ body {
   text-align: center;
   font-size: var(--tile-font-size);
   position: absolute;
+  border-radius: 10px;
+  color: white;
 }
 
 @keyframes fadeIn {
