--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,12 +7,35 @@
 
 body {
   font-family: sans-serif;
+  text-align: center;
+}
+
+h1 {
+  font-size: 50px;
+  margin: 0;
+}
+
+#full-window {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#board-container {
+  position: relative;
 }
 
 #board {
   width: calc(var(--tile-margin) + var(--tiles-per-row) * (var(--tile-margin) + var(--tile-size)));
   height: calc(var(--tile-margin) + var(--tiles-per-row) * (var(--tile-margin) + var(--tile-size)));
   background-color: aliceblue;
+  user-select: none;
 }
 
 .tile {
