--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
   --tile-size: 100px;
   --tile-margin: 10px;
   --tile-font-size: 50px;
+  --board-size: calc(var(--tile-margin) + var(--tiles-per-row) * (var(--tile-margin) + var(--tile-size)));
 }
 
 body {
@@ -19,12 +20,22 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-
   position: absolute;
+  flex-direction: column;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+#stats {
+  position: relative;
+  width: var(--board-size);
+  margin: 5px 0;
+}
+
+#score {
+  float: left;
 }
 
 #board-container {
@@ -32,8 +43,8 @@ h1 {
 }
 
 #board {
-  width: calc(var(--tile-margin) + var(--tiles-per-row) * (var(--tile-margin) + var(--tile-size)));
-  height: calc(var(--tile-margin) + var(--tiles-per-row) * (var(--tile-margin) + var(--tile-size)));
+  width: var(--board-size);
+  height: var(--board-size);
   background-color: aliceblue;
   user-select: none;
 }
