--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,8 +12,10 @@ body {
 }
 
 h1 {
-  font-size: 50px;
+  position: absolute;
+  top: 0;
   margin: 0;
+  font-size: 50px;
 }
 
 #full-window {
@@ -26,6 +28,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
+  transition: background-color 0.5s ease-in-out;
 }
 
 #stats {
@@ -45,7 +48,8 @@ h1 {
 #board {
   width: var(--board-size);
   height: var(--board-size);
-  background-color: aliceblue;
+  background-color: transparent;
+  border-radius: 10px;
   user-select: none;
 }
 
