change default background color to color of 2

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,6 +28,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: #6da9d2;
   transition: background-color 0.5s ease-in-out;
 }
 
