--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,15 +1,37 @@
-/* light gradient of blue -> purple -> pink -> red */
 :root {
+  /* colors set as none will be replaced with the highest tile color */
+  --text: black;
+  --board-bg: transparent;
+  --window-bg: none;
+
+  /* use highest tile text colors (color) or highest tile bg colors (background-color) to replace colors that are none? */
+  --dynamic-color: color;
+
+  /* tile text colors */
   --text-2: #6da9d2;
   --text-4: #3e92d0;
   --text-8: #2862a0;
   --text-16: #5e59a3;
-  --text-32: #86538B;
+  --text-32: #86538b;
   --text-64: #9e4f7d;
   --text-128: #c54b8c;
   --text-256: #d84a7a;
-  --text-512: #F0738A;
+  --text-512: #f0738a;
   --text-1024: #ff8c94;
   --text-2048: #ff6f61;
   --text-4096: #de2e41;
+
+  /* tile background colors */
+  --bg-2: black;
+  --bg-4: black;
+  --bg-8: black;
+  --bg-16: black;
+  --bg-32: black;
+  --bg-64: black;
+  --bg-128: black;
+  --bg-256: black;
+  --bg-512: black;
+  --bg-1024: black;
+  --bg-2048: black;
+  --bg-4096: black;
 }
