--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,8 @@
 
 body {
   font-family: "Open Sans", Roboto, Arial, sans-serif;
-  text-align: center;
+  color: var(--text);
+  background-color: var(--text-2);
 }
 
 span {
@@ -32,8 +33,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--text-2);
-  transition: background-color 0.5s ease-in-out;
+  background-color: var(--window-bg);
 }
 
 #game-over {
@@ -75,7 +75,7 @@ h1 {
 #board {
   width: var(--board-size);
   height: var(--board-size);
-  background-color: transparent;
+  background-color: var(--board-bg);
   border-radius: 10px;
   user-select: none;
 }
@@ -88,7 +88,6 @@ h1 {
   font-size: var(--tile-font-size);
   position: absolute;
   border-radius: 10px;
-  color: white;
 }
 
 @keyframes fadeIn {
