--- a/index.css
+++ b/index.css
@@ -51,6 +51,17 @@ h1 {
 
 #game-over * {
   position: relative;
+  margin: 10px;
+}
+
+.links a {
+  color: white;
+  text-decoration: none;
+}
+
+.links a:hover {
+  text-decoration: underline;
+  text-decoration: bold;
 }
 
 #stats {
