--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,6 +51,16 @@ h1 {
 
 #game-over * {
   position: relative;
+  margin: 10px;
+}
+
+.links a {
+  color: white;
+  text-decoration: none;
+}
+
+.links a:hover {
+  text-decoration: underline;
 }
 
 #stats {
