--- a/index.css
+++ b/index.css
@@ -20,11 +20,16 @@
   }
 }
 
+html {
+  overscroll-behavior: none;
+}
+
 body {
   font-family: "Open Sans", Roboto, Arial, sans-serif;
   color: var(--text);
   background-color: var(--text-2);
   font-size: font-size;
+  overscroll-behavior: none;
 }
 
 h1 {
@@ -77,7 +82,7 @@ h1 {
 #stats {
   position: relative;
   width: var(--board-size);
-  margin: 5px 0;
+  margin: 5px;
   font-weight: bold;
 }
 
