format with prettier

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -148,5 +148,7 @@ h1 {
 
 .animated-move {
   position: absolute;
-  transition: left 0.3s ease-in-out, top 0.3s ease-in-out;
+  transition:
+    left 0.3s ease-in-out,
+    top 0.3s ease-in-out;
 }
