--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -60,20 +60,38 @@ h1 {
   margin: 10px;
 }
 
-.links {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  margin-top: 20px;
-}
+@media screen and (min-width: 501px) {
+  .links {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    margin-top: 20px;
+  }
 
-.links * {
-  color: inherit;
-  text-decoration: none;
-  padding: 8px 12px;
-  border: 1px solid currentColor;
-  border-radius: 4px;
-  transition: all 0.2s;
+  .links * {
+    color: inherit;
+    text-decoration: none;
+    padding: 8px 12px;
+    border: 1px solid currentColor;
+    border-radius: 4px;
+    transition: all 0.2s;
+  }
+}
+@media screen and (max-width: 500px) {
+  .links {
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+  }
+
+  .links * {
+    color: inherit;
+    text-decoration: none;
+    padding: 5px;
+    border: 1px solid currentColor;
+    border-radius: 4px;
+    transition: all 0.2s;
+  }
 }
 
 .links *:hover {
@@ -223,6 +241,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     overflow: hidden;
   }
 
